입찰 / 결제 관련 service, controller 작업